<resources>
    <string name="app_name">SummerPractice24.2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment1">fragment1</string>
    <string name="mainFragment">mainFragment</string>
    <string name="fragment2">fragment2</string>
    <string name="fragment4">fragment4</string>
    <string name="fragment3">fragment3</string>
    <string name="newFragment">newFragment</string>
    <string name="введите_текст">введите_текст\n</string>
    <string name="text">text:</string>
    <string name="Отправить">Отправить</string>
    <string name="info">info</string>
</resources>